kube/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: be-service 
  labels:
    app: be
spec:
  ports:
  - port: 5000
  selector:
    app: be
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deployment
  labels:
    app: be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be
  template:
    metadata:
      labels:
        app: be
    spec:
      containers:
      - name: be
        image: ghcr.io/lennartvanlaake/bikeride-be:latest 
        ports:
        - containerPort: 5000
        volumeMounts:
            - mountPath: /usr/src/app/backend/public/uploads
              name: assets 
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: assets
          persistentVolumeClaim:
            claimName: assets-pv-claim
