kube/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: pg-service 
  labels:
    app: pg
spec:
  ports:
  - port: 5432
  selector:
    app: pg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg
  template:
    metadata:
      labels:
        app: pg
    spec: 
      containers:
        - name: postgres
          # image: sverrirab/sleep
          image: postgres:latest
          ports:
              - containerPort: 5432
          volumeMounts:
              - mountPath: /var/lib/postgresql/data
                name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
